connected swagger api-docs to localhost
