# controllers/recipes.js
@@ -19,12 +19,12 @@ const getAllRecipes = async (req, res) => {
 // Week 2 - Get Single Contact From ID
 const getSingleRecipe = async (req, res) => {
   try {
-    const userId = new ObjectId(req.params.id);
+    const recipeId = new ObjectId(req.params.id);
     const result = await mongodb
       .getDb()
       .db()
       .collection('recipes')
-      .find({ _id: userId });
+      .find({ _id: recipeId });
     result.toArray().then((lists) => {
       res.setHeader('Content-Type', 'application/json');
       res.status(200).json(lists[0]);
@@ -60,10 +60,56 @@ const createRecipe = async (req, res ) => {
 
 
 
+const updateRecipe = async (req, res) => {
+  try {
+    const recipeId = new ObjectId(req.params.id);
+
+    const recipe = {
+      title: req.body.title,
+      description: req.body.description,
+      instructions: req.body.instructions,
+      servings: req.body.servings,
+      prepTime: req.body.prepTime,
+      cookTime: req.body.cookTime,
+      ingredients: req.body.ingredients
+    };
+
+    const response = await mongodb.getDb().db().collection('recipes').replaceOne({ _id: recipeId }, recipe);
+
+    console.log(response);
+    if (response.modifiedCount > 0) {
+      res.status(204).send();
+    } else {
+      res.status(500).json(response.error || 'Some error occurred while updating the recipe.');
+    }
+  } catch (err) {
+    res.status(500).json({ message: err.message });
+  }
+};
+
+
+const deleteRecipe = async (req, res) => {
+  try {
+    const recipeId = new ObjectId(req.params.id);
+
+    const response = await mongodb.getDb().db().collection('recipes').deleteOne({ _id: recipeId });
+
+    if (response.deletedCount > 0) {
+      res.status(204).send();
+    } else {
+      res.status(404).json({ error: 'Contact not found' });
+    }
+  } catch (err) {
+    res.status(500).json({ message: err.message });
+  }
+};
+
+
+
 module.exports = { 
   getAllRecipes, 
-    getSingleRecipe,
-    createRecipe,
-    // updateContact,
-    // deleteContact
+  getSingleRecipe,
+  createRecipe,
+  updateRecipe,
+  deleteRecipe
   };
